Fixed footer alignment in low resolution screens (#358)
* Fixed footer alignment in low res screens

* Fix footer alignment on Settings page

* Fix footer alignment in some resolutions

--- a/src/scenes/Home/components/Footer/styles.css
+++ b/src/scenes/Home/components/Footer/styles.css
@@ -8,7 +8,7 @@
     margin-left: 5px;
 }
 
-@media screen and (min-height: 800px){
+@media screen and (min-height: 670px){
     .footer{
         position: fixed;
         width: 100%;
