--- a/src/scenes/Home/scenes/Settings/styles.css
+++ b/src/scenes/Home/scenes/Settings/styles.css
@@ -17,3 +17,11 @@
 .email_edit_input{
     margin-bottom: 20px;
 }
+
+@media screen and (min-height: 500px) {
+    .footer {
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+    }
+}
